feat: 第二阶段商品部分完成